--- a/views/dungeons.ejs
+++ b/views/dungeons.ejs
@@ -17,7 +17,7 @@
 			<% dungeons.forEach(function(dungeon){ %>
 				<div class="col-md-3 col-sm-6">
 					<div class="thumbnail">
-						<img src="<%= dungeon.image %>">
+						<img src=<%= dungeon.image %>>
 						<div class="caption">
 							<h4><%= dungeon.name %></h4>
 						</div>
