--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,8 @@
 						<div class="caption">
 							<h4><%= dungeon.name %></h4>
 						</div>
+						<p>
+							<a href="/dungeons/<%= dungeon._id %>" class="btn btn-primary">More Info</a>
 					</div>
 				</div>
 			<% }); %>
