--- a/views/new.ejs
+++ b/views/new.ejs
@@ -13,6 +13,19 @@
 				<input class="form-control" type="text" name="image" placeholder="image">
 			</div>
 			<div class="form-group">
+				<input class="form-control" type="text" name="description" placeholder="description">
+			</div>
+			<div class="form-group">
+				<select class="form-control" name="levels">
+					<option selected disabled># of floors</option>
+					<option value="1">1</option>
+					<option value="2">2</option>
+					<option value="3">3</option>
+					<option value="4">4</option>
+					<option value="5">5</option>
+				</select>
+			</div>
+			<div class="form-group">
 				<button class="btn btn-medium btn-primary submit">Submit!</button>
 			</div>
 		</form>
