--- a/views/dungeons/new.ejs
+++ b/views/dungeons/new.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 <div class="container">
 	<div class="jumbotron">
 		<h1>New Dungeon</h1>
@@ -31,4 +31,4 @@
 		</form>
 	</div>
 </div>
-<% include partials/footer %>
+<% include ../partials/footer %>
